--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
+NODE_ENV=development
+PORT=3000
+DATABASE_URL=postgresql://postgres:postgres123@db:5432/tcc_ambiental
+BASE_URL=http://localhost:3000
+
+# Antigas (manter por compatibilidade)
 DB_HOST=db
 DB_PORT=5432
 DB_USER=postgres
