--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
+NODE_ENV=development
 PORT=3000
+DATABASE_URL=postgresql://user:password@localhost:5432/database
+BASE_URL=http://localhost:3000
+
+# Database configs (legacy)
 DB_USER=postgres
 DB_PASS=postgres123
 DB_HOST=db
