--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "tcc-backend",
   "version": "1.0.0",
+  "description": "Backend para sistema de gestão de conformidade ambiental - MVP",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "multer": "^2.0.2",
-    "pg": "^8.8.0"
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
