--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=3000
-DATABASE_URL=postgresql://postgres:postgres123@db:5432/tcc_ambiental
+DATABASE_URL=postgresql://postgres:postgres123@db:5432/ecolex_ambiental
 BASE_URL=http://localhost:3000
 
 # Antigas (manter por compatibilidade)
@@ -8,4 +8,4 @@ DB_HOST=db
 DB_PORT=5432
 DB_USER=postgres
 DB_PASS=postgres123
-DB_NAME=tcc_ambiental
+DB_NAME=ecolex_ambiental
