--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: "3.8"
 services:
   db:
     image: postgres:15
-    container_name: tcc-backend-db
+    container_name: ecolex-backend-db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres123
-      POSTGRES_DB: tcc_ambiental
+      POSTGRES_DB: ecolex_ambiental
     volumes:
       - db_data:/var/lib/postgresql/data
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
@@ -15,7 +15,7 @@ services:
 
   backend:
     build: .
-    container_name: tcc-backend
+    container_name: ecolex-backend
     depends_on:
       - db
     env_file:
