--- a/.env
+++ b/.env
@@ -1,11 +1,7 @@
-NODE_ENV=development
-PORT=3000
-DATABASE_URL=postgresql://postgres:postgres123@db:5432/ecolex_ambiental
-BASE_URL=http://localhost:3000
+# Configuração do banco de dados Neon
+DATABASE_URL="postgresql://neondb_owner:npg_T9ExDbXe7dOa@ep-floral-bush-ad1b9mhz-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require"
 
-# Antigas (manter por compatibilidade)
-DB_HOST=db
-DB_PORT=5432
-DB_USER=postgres
-DB_PASS=postgres123
-DB_NAME=ecolex_ambiental
+# Configuração do servidor
+PORT=3000
+NODE_ENV=development
+BASE_URL=http://localhost:3000
