--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,9 @@
-NODE_ENV=development
-PORT=3000
-DATABASE_URL=postgresql://user:password@localhost:5432/database
-BASE_URL=http://localhost:3000
+# Configuração do banco de dados Neon
+# Substitua SUA_SENHA_AQUI pela senha real do neondb_owner
+# Você pode ver a senha clicando em "Show password" no painel do Neon
+DATABASE_URL="postgresql://neondb_owner:SUA_SENHA_AQUI@ep-floral-bush-ad1b9mhz-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require"
 
-# Database configs (legacy)
-DB_USER=postgres
-DB_PASS=postgres123
-DB_HOST=db
-DB_PORT=5432
-DB_NAME=ecolex_ambiental
+# Configuração do servidor
+PORT=3000
+NODE_ENV=development
+BASE_URL=http://localhost:3000
