--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,14 @@
 version: "3.8"
 services:
-  db:
-    image: postgres:15
-    container_name: ecolex-backend-db
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres123
-      POSTGRES_DB: ecolex_ambiental
-    volumes:
-      - db_data:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    ports:
-      - "5432:5432"
-
   backend:
     build: .
-    container_name: ecolex-backend
-    depends_on:
-      - db
+    container_name: tcc-backend
     env_file:
       - .env
     ports:
       - "3000:3000"
     volumes:
-      - .:/app:cached   # monta só o código, não node_modules
+      - .:/app
     tty: true
     stdin_open: true
-    # roda backend automaticamente em background e mantém bash
-    command: ["sh", "-c", "npm run dev & bash"]
-
-volumes:
-  db_data:
+    command: ["npm", "run", "dev"]
