Backend otimizado para Neon + Render

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 # Configuração do banco de dados Neon
-# Substitua SUA_SENHA_AQUI pela senha real do neondb_owner
-# Você pode ver a senha clicando em "Show password" no painel do Neon
-DATABASE_URL="postgresql://neondb_owner:SUA_SENHA_AQUI@ep-floral-bush-ad1b9mhz-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require"
+# Copie a Connection String completa do painel do Neon
+# Dashboard → Connection Details → Connection String
+DATABASE_URL="postgresql://neondb_owner:sua_senha@ep-xxxxx.us-east-1.aws.neon.tech/neondb?sslmode=require"
 
 # Configuração do servidor
 PORT=3000
 NODE_ENV=development
-BASE_URL=http://localhost:3000
+
+# URL do frontend (para CORS em produção)
+FRONTEND_URL=http://localhost:5173
