--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,33 @@
+# Dependencies
 node_modules/
+
+# Environment variables
 .env
+.env.local
+.env.production
+
+# Uploads (arquivos enviados por usuários)
 uploads/
+!uploads/.gitkeep
+
+# Logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
 .DS_Store
+Thumbs.db
+
+# IDE
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Build
+dist/
+build/
+.cache/
